--- a/lets-plot-images/results.html
+++ b/lets-plot-images/results.html
@@ -4,7 +4,7 @@
        &lt;script type=&quot;text/javascript&quot; data-lets-plot-script=&quot;library&quot; src=&quot;https://cdn.jsdelivr.net/gh/JetBrains/lets-plot@v2.5.1/js-package/distr/lets-plot.min.js&quot;>&lt;/script>
    &lt;/head>
    &lt;body>
-          &lt;div id=&quot;M4uKXI&quot;>&lt;/div>
+          &lt;div id=&quot;XsHstM&quot;>&lt;/div>
    &lt;script type=&quot;text/javascript&quot; data-lets-plot-script=&quot;plot&quot;>
        var plotSpec={
 &quot;kind&quot;:&quot;ggbunch&quot;,
@@ -35,14 +35,14 @@
 &quot;layers&quot;:[{
 &quot;geom&quot;:&quot;tile&quot;,
 &quot;data&quot;:{
-&quot;model_language&quot;:[&quot;de&quot;,&quot;de&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;se&quot;,&quot;se&quot;,&quot;se&quot;,&quot;dk&quot;,&quot;dk&quot;,&quot;dk&quot;],
-&quot;dataset_language&quot;:[&quot;de&quot;,&quot;es&quot;,&quot;en&quot;,&quot;de&quot;,&quot;es&quot;,&quot;en&quot;,&quot;de&quot;,&quot;es&quot;,&quot;en&quot;,&quot;de&quot;,&quot;es&quot;,&quot;en&quot;],
-&quot;cos_dist &quot;:[0.15967300174051577,0.08574489503915597,0.09829446873926496,0.10134015063111868,0.10993103983695551,0.11434652159070093,0.27442138241114317,0.26080950705632716,0.33642114622001335,0.39699273461885765,0.3951464298099834,0.4232880242748915]
+&quot;model_language&quot;:[&quot;de&quot;,&quot;de&quot;,&quot;de&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;se&quot;,&quot;se&quot;,&quot;se&quot;,&quot;se&quot;,&quot;dk&quot;,&quot;dk&quot;,&quot;dk&quot;,&quot;dk&quot;],
+&quot;dataset_language&quot;:[&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;],
+&quot;cos_simil&quot;:[0.495124863013294,0.23983603403814316,0.12927388324244835,0.5423828693621993,0.5366257741588789,0.2368961195014075,0.11118357816822086,0.4905072917192804,0.4982428667456005,0.271657912691754,0.23597195591474535,0.4921988525392243,0.48235518104905584,0.30594419098973424,0.20498448540803105,0.4849701254897248]
 },
 &quot;mapping&quot;:{
 &quot;x&quot;:&quot;model_language&quot;,
 &quot;y&quot;:&quot;dataset_language&quot;,
-&quot;fill&quot;:&quot;cos_dist &quot;
+&quot;fill&quot;:&quot;cos_simil&quot;
 },
 &quot;data_meta&quot;:{
 }
@@ -76,9 +76,9 @@
 &quot;layers&quot;:[{
 &quot;geom&quot;:&quot;tile&quot;,
 &quot;data&quot;:{
-&quot;model_language&quot;:[&quot;de&quot;,&quot;de&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;se&quot;,&quot;se&quot;,&quot;se&quot;,&quot;dk&quot;,&quot;dk&quot;,&quot;dk&quot;],
-&quot;dataset_language&quot;:[&quot;de&quot;,&quot;es&quot;,&quot;en&quot;,&quot;de&quot;,&quot;es&quot;,&quot;en&quot;,&quot;de&quot;,&quot;es&quot;,&quot;en&quot;,&quot;de&quot;,&quot;es&quot;,&quot;en&quot;],
-&quot;avg_score&quot;:[0.45961145257490865,0.3596578905213574,0.39858218671067225,0.24995657709834734,0.2489439262684079,0.30567127420728096,0.2578407135658912,0.28967004164648463,0.34165791188228956,0.2717791754532387,0.2977848773069256,0.356502213774373]
+&quot;model_language&quot;:[&quot;de&quot;,&quot;de&quot;,&quot;de&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;nl&quot;,&quot;se&quot;,&quot;se&quot;,&quot;se&quot;,&quot;se&quot;,&quot;dk&quot;,&quot;dk&quot;,&quot;dk&quot;,&quot;dk&quot;],
+&quot;dataset_language&quot;:[&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;,&quot;nl&quot;,&quot;dk&quot;,&quot;se&quot;,&quot;de&quot;],
+&quot;avg_score&quot;:[0.2873287126881779,0.2526210235254765,0.2381285357760165,0.49310188920197656,0.5094319990543368,0.18005610025909244,0.17646640867919125,0.2601777667735642,0.2552509211713288,0.3141020833252727,0.41607119597107334,0.2630136824209609,0.28958934720619656,0.43424409277117876,0.30152839629033656,0.2836758032940812]
 },
 &quot;mapping&quot;:{
 &quot;x&quot;:&quot;model_language&quot;,
@@ -92,7 +92,7 @@
 }
 }]
 };
-       var plotContainer = document.getElementById(&quot;M4uKXI&quot;);
+       var plotContainer = document.getElementById(&quot;XsHstM&quot;);
        LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);
    &lt;/script>
    &lt;/body>
